<?xml version="1.0"?>
<package>

  <!-- Package information. -->
  <name>plslam_ros</name>
  <version>0.1.0</version>
  <description>
    Stereo Visual SLAM with Points and Line Segments
  </description>
  <author>Ruben Gomez-Ojeda</author>
  <maintainer email="rubengooj@gmail.com">Ruben Gomez-Ojeda</maintainer>
  <url> http://mapir.isa.uma.es/mapirwebsite/index.php/people/164-ruben-gomez </url>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake module -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed to run this package. -->
  <run_depend>cmake_modules</run_depend> <!-- for FindEigen.cmake module -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
